<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/information"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:background="@drawable/rectangle"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
            <TextView
                    android:text="@string/build"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:background="@drawable/rectangle"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
            <TextView
                    android:text="@string/version"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/complaints"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:background="@drawable/rectangle"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

            <TextView
                    android:text="@string/emailMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
            />
            <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            <Button
                    android:id="@+id/btnMail"
                    android:text="@string/sendMail"
                    android:textSize="12sp"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/white"
            />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>